--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -3,7 +3,7 @@
 <h1>hw</h1>
 <h2>w10</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
-<p><button id="add1to100">1 add to 100</button></p>
+<p><button id="add1to100">w10小考</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
@@ -229,7 +229,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+        url = "https://gist.githubusercontent.com/BrianTsai071/b9c20996d6ab4e73cd712754b9d2b131/raw/d17dc8b989b6446590950db456394953969fd844/W11"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -264,7 +264,7 @@ def clear_bd1(ev):
 # 利用 ace 中的 Editor 建立 Ace 物件, 其中的輸入變數分別對應到頁面中的編輯區物件
 Ace2 = ace.Editor(editor_id="kw_editor1", console_id="kw_console1", container_id="kw__container1", storage_id="kw_py_src1" )
 
-add1to100_url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+add1to100_url = "https://gist.githubusercontent.com/BrianTsai071/b9c20996d6ab4e73cd712754b9d2b131/raw/d17dc8b989b6446590950db456394953969fd844/W11"
 
 # 從 gist 取得程式碼
 add_src = open(add1to100_url).read()
@@ -356,8 +356,7 @@ run1()
 <script src="/static/SVGpathUtils-6v03-min.js"></script>
 <script src="/static/sylvester.js"></script>
 <script src="/static/PrairieDraw.js"></script>
-</p>
-<h1>Brython</h1>
+</p><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
