--- a/content/Brython.html
+++ b/content/Brython.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w14.html'>w14</a><li><a href='w13.html'>w13</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -424,7 +424,6 @@ doc["aitetris"].bind("click", aitetris.do)
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
-<div id="brython_div2"></div>
 <!-- editor2 結束 --><hr/><br />w11 << <a href='w11.html'>Previous</a> </div>
         
     <!-- footer -->
