增加倉儲網址

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -15,6 +15,7 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/solves1.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -41,6 +42,52 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/solves3.mp4" type="video/mp4"/></video></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/fa90149256eb43c6e3802bf6/w/d35efff81ff3842fc8ed98d7/e/f276459a399f0f7a898947db" title="onshape2">https://cad.onshape.com/documents/fa90149256eb43c6e3802bf6/w/d35efff81ff3842fc8ed98d7/e/f276459a399f0f7a898947db</a></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="/downloads/w14-2.mp4" type="video/mp4"/></video> </div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/e8d8ff17297bfed124825417/w/9e6abeacedc785a233c09a6c/e/34a408581d190c0e3e541bcb" title="onshape3">https://cad.onshape.com/documents/e8d8ff17297bfed124825417/w/9e6abeacedc785a233c09a6c/e/34a408581d190c0e3e541bcb</a></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="/downloads/w14-3.mp4" type="video/mp4"/></video></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
