--- a/content/About.html
+++ b/content/About.html
@@ -143,7 +143,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='hw.html'>Next</a> >> hw<br /><h1>About</h1>
 <p>cmsite</p>
-<p>倉儲https://github.com/mdecad2022/site-BrianTsai071</p><br /> <a href='hw.html'>Next</a> >> hw</div>
+<p>倉儲https://github.com/mdecad2022/site-BrianTsai071</p>
+<p>個人網站:https://mdecad2022.github.io/site-BrianTsai071/content/index.html</p><br /> <a href='hw.html'>Next</a> >> hw</div>
         
     <!-- footer -->
       <div class="container">
