--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,7 @@
 <h1>About</h1>
 <p>cmsite</p>
-<p>倉儲https://github.com/mdecad2022/site-BrianTsai071</p><h1>hw</h1>
+<p>倉儲https://github.com/mdecad2022/site-BrianTsai071</p>
+<p>個人網站:https://mdecad2022.github.io/site-BrianTsai071/content/index.html</p><h1>hw</h1>
 <h2>w14</h2>
 <script>
 var winkVideoData = {
