--- a/content/index.html
+++ b/content/index.html
@@ -129,7 +129,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w14.html'>w14</a><li><a href='w13.html'>w13</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='about.html'>about</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w14.html'>w14</a><li><a href='w13.html'>w13</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,10 +140,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='hw.html'>Next</a> >> hw<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='hw.html'>Next</a> >> hw<br /><h1>about</h1>
 <p>cmsite</p>
-<p>倉儲https://github.com/mdecad2022/site-BrianTsai071</p>
-<p>個人網站:https://mdecad2022.github.io/site-BrianTsai071/content/index.html</p><br /> <a href='hw.html'>Next</a> >> hw</div>
+<p>倉儲:<a href="https://github.com/mdecad2022/site-BrianTsai071">https://github.com/mdecad2022/site-BrianTsai071</a></p>
+<p>個人網站:<a href="https://mdecad2022.github.io/site-BrianTsai071/content/About.html">https://mdecad2022.github.io/site-BrianTsai071/content/About.html</a></p><br /> <a href='hw.html'>Next</a> >> hw</div>
         
     <!-- footer -->
       <div class="container">
