--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,7 +1,7 @@
-<h1>About</h1>
+<h1>about</h1>
 <p>cmsite</p>
-<p>倉儲https://github.com/mdecad2022/site-BrianTsai071</p>
-<p>個人網站:https://mdecad2022.github.io/site-BrianTsai071/content/index.html</p><h1>hw</h1>
+<p>倉儲:<a href="https://github.com/mdecad2022/site-BrianTsai071">https://github.com/mdecad2022/site-BrianTsai071</a></p>
+<p>個人網站:<a href="https://mdecad2022.github.io/site-BrianTsai071/content/About.html">https://mdecad2022.github.io/site-BrianTsai071/content/About.html</a></p><h1>hw</h1>
 <h2>w14</h2>
 <script>
 var winkVideoData = {
