--- a/content/w14.html
+++ b/content/w14.html
@@ -228,6 +228,9 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/w14-3.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">https://cad.onshape.com/documents/f68c5cb2f6934dad04a481d2/w/3f141353046c75434238f34f/e/410c50e7ecdca922f2bd666b?renderMode=0&amp;uiState=63ad2de30ed7f0637fec9b65</div>
+<div class="winkVideoContainerClass"></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
