--- a/config/content.htm
+++ b/config/content.htm
@@ -1,7 +1,7 @@
 <h1>about</h1>
 <p>cmsite</p>
 <p>倉儲:<a href="https://github.com/mdecad2022/site-BrianTsai071">https://github.com/mdecad2022/site-BrianTsai071</a></p>
-<p>個人網站:<a href="https://mdecad2022.github.io/site-BrianTsai071/content/About.html">https://mdecad2022.github.io/site-BrianTsai071/content/About.html</a></p><h1>hw</h1>
+<p>個人網站:<a href="https://mdecad2022.github.io/site-BrianTsai071/content/">https://mdecad2022.github.io/site-BrianTsai071/content/</a></p><h1>hw</h1>
 <h2>w14</h2>
 <script>
 var winkVideoData = {
