--- a/content/about.html
+++ b/content/about.html
@@ -144,7 +144,7 @@ img.add_border {
     <div id="tipue_search_content"> <a href='hw.html'>Next</a> >> hw<br /><h1>about</h1>
 <p>cmsite</p>
 <p>倉儲:<a href="https://github.com/mdecad2022/site-BrianTsai071">https://github.com/mdecad2022/site-BrianTsai071</a></p>
-<p>個人網站:<a href="https://mdecad2022.github.io/site-BrianTsai071/content/About.html">https://mdecad2022.github.io/site-BrianTsai071/content/About.html</a></p><br /> <a href='hw.html'>Next</a> >> hw</div>
+<p>個人網站:<a href="https://mdecad2022.github.io/site-BrianTsai071/content/">https://mdecad2022.github.io/site-BrianTsai071/content/</a></p><br /> <a href='hw.html'>Next</a> >> hw</div>
         
     <!-- footer -->
       <div class="container">
