--- a/content/w13.html
+++ b/content/w13.html
@@ -141,7 +141,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>w13</h1><br />w14 << <a href='w14.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>w13</h1>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/Wink組合.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div><br />w14 << <a href='w14.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
