--- a/config/content.htm
+++ b/config/content.htm
@@ -1,7 +1,8 @@
 <h1>about</h1>
 <p>cmsite</p>
 <p>倉儲:<a href="https://github.com/mdecad2022/site-BrianTsai071">https://github.com/mdecad2022/site-BrianTsai071</a></p>
-<p>個人網站:<a href="https://mdecad2022.github.io/site-BrianTsai071/content/">https://mdecad2022.github.io/site-BrianTsai071/content/</a></p><h1>hw</h1>
+<p>個人網站:<a href="https://mdecad2022.github.io/site-BrianTsai071/content/">https://mdecad2022.github.io/site-BrianTsai071/content/</a></p>
+<h1>hw</h1>
 <h2>w14</h2>
 <script>
 var winkVideoData = {
@@ -143,7 +144,8 @@ var winkVideoData = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="/downloads/nx3.mp4" type="video/mp4"/></video></div><h2>w13</h2>
+<source src="/downloads/nx3.mp4" type="video/mp4"/></video></div>
+<h2>w13</h2>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -157,7 +159,8 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/Wink組合.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass"></div><h2>w10</h2>
+<div class="winkVideoContainerClass"></div>
+<h2>w10</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
 <p><button id="add1to100">w10小考</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
@@ -504,7 +507,8 @@ run1()
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></p>
-<div id="brython_div2"></div>
+<h2 id="brython_div2">w6</h2>
+<p></p>
 <!-- editor2 結束 -->
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="/static/Cango-24v03-min.js"></script>
