--- a/content/w13.html
+++ b/content/w13.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w14.html'>w14</a><li><a href='w13.html'>w13</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='about.html'>about</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w14.html'>w14</a><li><a href='w13.html'>w13</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w6.html'>w6</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -155,7 +155,8 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/Wink組合.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass"></div><br />w14 << <a href='w14.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+<div class="winkVideoContainerClass"></div>
+<br />w14 << <a href='w14.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
