--- a/content/w14.html
+++ b/content/w14.html
@@ -230,7 +230,6 @@ var winkVideoData = {
 <source src="./../downloads/w14-3.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/f68c5cb2f6934dad04a481d2/w/3f141353046c75434238f34f/e/410c50e7ecdca922f2bd666b?renderMode=0&amp;uiState=63ad2de30ed7f0637fec9b65"> https://cad.onshape.com/documents/f68c5cb2f6934dad04a481d2/w/3f141353046c75434238f34f/e/410c50e7ecdca922f2bd666b?renderMode=0&amp;uiState=63ad2de30ed7f0637fec9b65</a></div>
-<div class="winkVideoContainerClass"></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -244,6 +243,8 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/w14-1.mp4" type="video/mp4"/></video></div>
+<p>零件1</p>
+<p><a href="./../downloads/model4.zip">/downloads/model4.zip</a></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -257,6 +258,8 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/nx 1.mp4" type="video/mp4"/></video></div>
+<p>零件2</p>
+<p><a href="./../downloads/model5.zip">/downloads/model5.zip</a></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -270,6 +273,8 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/nx2.mp4" type="video/mp4"/></video></div>
+<p>零件3</p>
+<p><a href="./../downloads/model6.zip">/downloads/model6.zip</a></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -282,8 +287,7 @@ var winkVideoData = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/nx3.mp4" type="video/mp4"/></video></div>
-<br />hw << <a href='hw.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+<source src="./../downloads/nx3.mp4" type="video/mp4"/></video></div><br />hw << <a href='hw.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
